# CodeMLPython

./: .gitignore  BAYESIAN_OPTIMIZATION.md  BAYESIAN_QUICKSTART.md  Breast_cancer_projects.ipynb  Ch3.ClevelandData.csv  DNA+CLASSIFICATION.ipynb  Diabetes_Udemy+(1).ipynb  Diabetes_Udemy.ipynb  Heart+Disease+Prediction+with+Neural+Networks.ipynb  Heart_disease_project.ipynb  Makefile  README.md  SECURITY.md  ai_drug_discovery.py  pyproject.toml  requirements-dev.txt  requirements-drug-discovery.txt  requirements.txt  statistics_calculator.py
.github/workflows/: dependency-audit.yml  drug-discovery-rdkit.yml  lint.yml  notebook-checks.yml  tests.yml  unit-tests.yml
BayesianOptimizationSuite/: BAYESIAN_OPTIMIZATION_PROJECTS.md  FAQ.md  MIGRATION_TO_BAYESCORE.md  QUICKSTART.md  README.md  ROADMAP.md
BayesianOptimizationSuite/BayesCore/: API_REFERENCE.md  ARCHITECTURE.md  NEW_PROJECT_GUIDE.md  PROFESSIONAL_USAGE.md  README.md  pyproject.toml
BayesianOptimizationSuite/BayesCore/scripts/: run_tests.py
BayesianOptimizationSuite/BayesCore/src/bayes_core/: __init__.py  core.py
BayesianOptimizationSuite/BayesCore/tests/: test_bayes_core.py
BayesianOptimizationSuite/HRBayesOptimizer/: README.md  pyproject.toml
BayesianOptimizationSuite/HRBayesOptimizer/scripts/: run_tests.py
BayesianOptimizationSuite/HRBayesOptimizer/src/hr_bayes_optimizer/: __init__.py  cli.py  core.py  optimizer.py
BayesianOptimizationSuite/HRBayesOptimizer/tests/: test_optimizer.py
BayesianOptimizationSuite/HyperparameterBayesOptimizer/: README.md  pyproject.toml
BayesianOptimizationSuite/HyperparameterBayesOptimizer/scripts/: run_tests.py
BayesianOptimizationSuite/HyperparameterBayesOptimizer/src/hyperparameter_bayes_optimizer/: __init__.py  cli.py  core.py
BayesianOptimizationSuite/HyperparameterBayesOptimizer/tests/: test_hyperparameter_optimizer.py
BayesianOptimizationSuite/SecurityBayesOptimizer/: README.md  pyproject.toml
BayesianOptimizationSuite/SecurityBayesOptimizer/examples/demo_project/: app.py  frontend.js
BayesianOptimizationSuite/SecurityBayesOptimizer/scripts/: run_tests.py
BayesianOptimizationSuite/SecurityBayesOptimizer/src/security_bayes_optimizer/: __init__.py  cli.py  core.py  scanner.py
BayesianOptimizationSuite/SecurityBayesOptimizer/tests/: test_security_optimizer.py
BayesianOptimizationSuite/TokenBayesOptimizer/: README.md  pyproject.toml
BayesianOptimizationSuite/TokenBayesOptimizer/examples/: run_demo.ps1  tasks.jsonl
BayesianOptimizationSuite/TokenBayesOptimizer/src/token_bayes_optimizer/: __init__.py  cli.py  optimizer.py
BayesianOptimizationSuite/TokenBayesOptimizer/tests/: test_optimizer.py
examples/: molecules.csv  seeds.csv
scripts/: clear_outputs.sh  run_tests.py  verify.py
src/codeml/: __init__.py
src/codeml/drug_discovery/: __init__.py  cli.py  pipeline.py
tests/: test_ai_drug_discovery.py  test_datasets.py  test_notebooks.py  test_placeholder.py  test_statistics_calculator.py
