[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-bayes-optimizer"
version = "0.1.0"
description = "Bayesian optimization system for HR policy tuning under cost, quality, retention, and fairness constraints."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[project.scripts]
hr-bayes-optimize = "hr_bayes_optimizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
